feat: add index.ts with all exports

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "check": "npm run lint:check && npm run ts:check",
     "prebuild": "npm run clean && npm run check",
     "build:watch": "npm run build && nodemon --watch src --ext ts --exec \"tsc && node ./post-build.mjs\"",
-    "build": "tsc && node ./post-build.mjs",
+    "build": "tsgo --project ./tsconfig.json && node ./post-build.mjs",
     "pub:patch": "PUBLISH=true PUBLISH_VERSION=patch pnpm run build",
     "pub:minor": "PUBLISH=true PUBLISH_VERSION=minor pnpm run build",
     "pub:major": "PUBLISH=true PUBLISH_VERSION=major pnpm run build",
@@ -40,6 +40,7 @@
   },
   "devDependencies": {
     "@types/node": "^20.17.30",
+    "@typescript/native-preview": "7.0.0-dev.20250523.1",
     "@vitejs/plugin-react-swc": "^3.9.0",
     "@vitest/coverage-istanbul": "^3.1.2",
     "eslint": "^8.57.1",
