--- a/package.json
+++ b/package.json
@@ -2,20 +2,24 @@
   "name": "yummies",
   "version": "4.2.6",
   "scripts": {
-    "clean": "rimraf dist",
+    "prepare": "pnpm dev:install-hooks",
+    "clean": "rm -rf dist",
     "lint:check": "eslint . --fix",
     "ts:check": "tsc --noEmit",
     "check": "npm run lint:check && npm run ts:check",
     "prebuild": "npm run clean && npm run check",
     "build:watch": "npm run build && nodemon --watch src --ext ts --exec \"tsc && node ./post-build.mjs\"",
     "build": "tsc && node ./post-build.mjs",
+    "pub": "PUBLISH=true pnpm run build",
+    "pub-ci": "PUBLISH=true CI=true pnpm run build",
     "pub:patch": "PUBLISH=true PUBLISH_VERSION=patch pnpm run build",
     "pub:minor": "PUBLISH=true PUBLISH_VERSION=minor pnpm run build",
     "pub:major": "PUBLISH=true PUBLISH_VERSION=major pnpm run build",
-    "test": "vitest run",
-    "test:watch": "vitest watch",
-    "test:coverage": "vitest run --coverage",
-    "dev": "pnpm test:watch"
+    "test": "vitest run --config vitest.config.ts",
+    "test:watch": "vitest watch --config vitest.config.ts",
+    "test:coverage": "vitest run --config vitest.config.ts --coverage",
+    "dev": "pnpm test:watch",
+    "dev:install-hooks": "if [ -z \"$CI\" ]; then lefthook install; fi"
   },
   "keywords": [],
   "author": "js2me",
@@ -40,13 +44,17 @@
     "tailwind-merge": "^2.6.0"
   },
   "devDependencies": {
+    "@changesets/changelog-github": "^0.5.1",
+    "@changesets/cli": "^2.29.5",
     "@types/node": "^20.17.30",
     "@vitejs/plugin-react-swc": "^3.9.0",
     "@vitest/coverage-istanbul": "^3.1.2",
+    "commitfmt": "^1.0.4",
     "eslint": "^8.57.1",
     "js2me-eslint-config": "^1.0.7",
-    "js2me-exports-post-build-script": "^2.0.18",
+    "js2me-exports-post-build-script": "^4.1.5",
     "jsdom": "^26.1.0",
+    "lefthook": "^1.11.16",
     "nodemon": "^3.1.9",
     "rimraf": "^6.0.1",
     "typescript": "^5.8.3",
