feat: add parser/format utils; feat: migrate from eslint to biome

--- a/package.json
+++ b/package.json
@@ -1,64 +1,64 @@
 {
-  "name": "yummies",
-  "version": "4.10.0",
-  "scripts": {
-    "prepare": "pnpm dev:install-hooks",
-    "clean": "rm -rf dist",
-    "lint:check": "eslint . --fix",
-    "ts:check": "tsc --noEmit",
-    "check": "npm run lint:check && npm run ts:check",
-    "prebuild": "npm run clean && npm run check",
-    "build:watch": "npm run build && nodemon --watch src --ext ts --exec \"tsc && node ./post-build.mjs\"",
-    "build": "tsc && node ./post-build.mjs",
-    "pub": "PUBLISH=true pnpm run build",
-    "pub-ci": "PUBLISH=true CI=true pnpm run build",
-    "pub:patch": "PUBLISH=true PUBLISH_VERSION=patch pnpm run build",
-    "pub:minor": "PUBLISH=true PUBLISH_VERSION=minor pnpm run build",
-    "pub:major": "PUBLISH=true PUBLISH_VERSION=major pnpm run build",
-    "test": "vitest run --config vitest.config.ts",
-    "test:watch": "vitest watch --config vitest.config.ts",
-    "test:coverage": "vitest run --config vitest.config.ts --coverage",
-    "dev": "pnpm test:watch",
-    "dev:install-hooks": "if [ -z \"$CI\" ]; then lefthook install; fi"
-  },
-  "keywords": [],
-  "author": "js2me",
-  "license": "MIT",
-  "description": "",
-  "type": "module",
-  "bugs": {
-    "url": "https://github.com/js2me/yummies/issues"
-  },
-  "homepage": "https://github.com/js2me/yummies",
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/js2me/yummies"
-  },
-  "dependencies": {
-    "@types/insane": "^1.0.0",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "dayjs": "^1.11.13",
-    "insane": "^2.6.2",
-    "nanoid": "^5.1.5",
-    "tailwind-merge": "^3.3.1"
-  },
-  "devDependencies": {
-    "@changesets/changelog-github": "^0.5.1",
-    "@changesets/cli": "^2.29.5",
-    "@types/node": "^20.17.30",
-    "@vitejs/plugin-react-swc": "^3.9.0",
-    "@vitest/coverage-istanbul": "^3.1.2",
-    "commitfmt": "^1.0.4",
-    "eslint": "^8.57.1",
-    "js2me-eslint-config": "^1.0.7",
-    "js2me-exports-post-build-script": "^5.0.1",
-    "jsdom": "^26.1.0",
-    "lefthook": "^1.11.16",
-    "nodemon": "^3.1.9",
-    "rimraf": "^6.0.1",
-    "typescript": "^5.8.3",
-    "vitest": "^3.1.2"
-  },
-  "packageManager": "pnpm@9.5.0+sha512.140036830124618d624a2187b50d04289d5a087f326c9edfc0ccd733d76c4f52c3a313d4fc148794a2a9d81553016004e6742e8cf850670268a7387fc220c903"
+	"name": "yummies",
+	"version": "4.10.0",
+	"scripts": {
+		"prepare": "pnpm dev:install-hooks",
+		"clean": "rm -rf dist",
+		"lint:check": "pnpm exec biome check --write --no-errors-on-unmatched --files-ignore-unknown=true",
+		"ts:check": "tsc --noEmit",
+		"check": "npm run lint:check && npm run ts:check",
+		"prebuild": "npm run clean && npm run check",
+		"build:watch": "npm run build && nodemon --watch src --ext ts --exec \"tsc && node ./post-build.mjs\"",
+		"build": "tsc && node ./post-build.mjs",
+		"pub": "PUBLISH=true pnpm run build",
+		"pub-ci": "PUBLISH=true CI=true pnpm run build",
+		"pub:patch": "PUBLISH=true PUBLISH_VERSION=patch pnpm run build",
+		"pub:minor": "PUBLISH=true PUBLISH_VERSION=minor pnpm run build",
+		"pub:major": "PUBLISH=true PUBLISH_VERSION=major pnpm run build",
+		"test": "vitest run --config vitest.config.ts",
+		"test:watch": "vitest watch --config vitest.config.ts",
+		"test:coverage": "vitest run --config vitest.config.ts --coverage",
+		"dev": "pnpm test:watch",
+		"dev:install-hooks": "if [ -z \"$CI\" ]; then lefthook install; fi"
+	},
+	"keywords": [],
+	"author": "js2me",
+	"license": "MIT",
+	"description": "",
+	"type": "module",
+	"bugs": {
+		"url": "https://github.com/js2me/yummies/issues"
+	},
+	"homepage": "https://github.com/js2me/yummies",
+	"repository": {
+		"type": "git",
+		"url": "git://github.com/js2me/yummies"
+	},
+	"dependencies": {
+		"@types/insane": "^1.0.0",
+		"class-variance-authority": "^0.7.1",
+		"clsx": "^2.1.1",
+		"dayjs": "^1.11.13",
+		"insane": "^2.6.2",
+		"nanoid": "^5.1.5",
+		"tailwind-merge": "^3.3.1"
+	},
+	"devDependencies": {
+		"@changesets/changelog-github": "^0.5.1",
+		"@changesets/cli": "^2.29.5",
+		"@biomejs/biome": "2.1.4",
+		"@types/node": "^20.17.30",
+		"@vitejs/plugin-react-swc": "^3.9.0",
+		"@vitest/coverage-istanbul": "^3.1.2",
+		"commitfmt": "^1.0.4",
+		"js2me-biome-config": "^1.0.3",
+		"js2me-exports-post-build-script": "^5.0.1",
+		"jsdom": "^26.1.0",
+		"lefthook": "^1.11.16",
+		"nodemon": "^3.1.9",
+		"rimraf": "^6.0.1",
+		"typescript": "^5.8.3",
+		"vitest": "^3.1.2"
+	},
+	"packageManager": "pnpm@9.5.0+sha512.140036830124618d624a2187b50d04289d5a087f326c9edfc0ccd733d76c4f52c3a313d4fc148794a2a9d81553016004e6742e8cf850670268a7387fc220c903"
 }
