--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,32 +1,26 @@
 {
-  "compilerOptions": {
-    "types": [],
-    "target": "ESNext",
-    "outDir": "dist",
-    "declaration": true,
-    "declarationMap": true,
-    "useDefineForClassFields": true,
-    "lib": ["DOM", "DOM.Iterable", "ESNext"],
-    "allowJs": false,
-    "skipLibCheck": true,
-    "esModuleInterop": false,
-    "allowSyntheticDefaultImports": true,
-    "strict": true,
-    "forceConsistentCasingInFileNames": true,
-    "module": "NodeNext",
-    "moduleResolution": "nodenext",
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "typeRoots": [
-      "./node_modules/@types/", "./types", "./node_modules"
-    ],
-    "noEmit": false,
-    "jsx": "react-jsx"
-  },
-  "include": [
-    "src"
-  ],
-  "exclude": [
-    "src/**/*.test.ts"
-  ]
+	"compilerOptions": {
+		"types": [],
+		"target": "ESNext",
+		"outDir": "dist",
+		"declaration": true,
+		"declarationMap": true,
+		"useDefineForClassFields": true,
+		"lib": ["DOM", "DOM.Iterable", "ESNext"],
+		"allowJs": false,
+		"skipLibCheck": true,
+		"esModuleInterop": false,
+		"allowSyntheticDefaultImports": true,
+		"strict": true,
+		"forceConsistentCasingInFileNames": true,
+		"module": "NodeNext",
+		"moduleResolution": "nodenext",
+		"resolveJsonModule": true,
+		"isolatedModules": true,
+		"typeRoots": ["./node_modules/@types/", "./types", "./node_modules"],
+		"noEmit": false,
+		"jsx": "react-jsx"
+	},
+	"include": ["src"],
+	"exclude": ["src/**/*.test.ts"]
 }
