--- a/package.json
+++ b/package.json
@@ -34,6 +34,14 @@
 		"type": "git",
 		"url": "git://github.com/js2me/yummies"
 	},
+  "peerDependencies": {
+    "mobx": "^6.12.4"
+  },
+  "peerDependenciesMeta": {
+    "mobx": {
+      "optional": true
+    }
+  },
 	"dependencies": {
 		"@types/insane": "^1.0.0",
 		"class-variance-authority": "^0.7.1",
