feat: add react hooks accessed by yummies/react

--- a/package.json
+++ b/package.json
@@ -35,10 +35,14 @@
 		"url": "git://github.com/js2me/yummies"
 	},
 	"peerDependencies": {
-		"mobx": "^6.12.4"
+		"mobx": "^6.12.4",
+		"react": "^18 || ^19"
 	},
 	"peerDependenciesMeta": {
 		"mobx": {
+			"optional": true
+		},
+		"react": {
 			"optional": true
 		}
 	},
@@ -56,6 +60,7 @@
 		"@changesets/cli": "^2.29.5",
 		"@biomejs/biome": "2.1.4",
 		"@types/node": "^20.17.30",
+		"@types/react": "^18",
 		"@vitejs/plugin-react-swc": "^3.9.0",
 		"@vitest/coverage-istanbul": "^3.1.2",
 		"commitfmt": "^1.0.4",
