--- a/package.json
+++ b/package.json
@@ -1,76 +1,265 @@
 {
-	"name": "yummies",
-	"version": "5.3.2",
-	"scripts": {
-		"prepare": "pnpm dev:install-hooks",
-		"clean": "rm -rf dist",
-		"lint:check": "pnpm exec biome check --write --no-errors-on-unmatched --files-ignore-unknown=true",
-		"ts:check": "tsc --noEmit",
-		"check": "npm run lint:check && npm run ts:check",
-		"prebuild": "npm run clean && npm run check",
-		"build:watch": "npm run build && nodemon --watch src --ext ts --exec \"tsc && node ./post-build.mjs\"",
-		"build": "tsc && node ./post-build.mjs",
-		"pub": "PUBLISH=true pnpm run build",
-		"pub-ci": "PUBLISH=true CI=true pnpm run build",
-		"pub:patch": "PUBLISH=true PUBLISH_VERSION=patch pnpm run build",
-		"pub:minor": "PUBLISH=true PUBLISH_VERSION=minor pnpm run build",
-		"pub:major": "PUBLISH=true PUBLISH_VERSION=major pnpm run build",
-		"test": "vitest run --config vitest.config.ts",
-		"test:watch": "vitest watch --config vitest.config.ts",
-		"test:coverage": "vitest run --config vitest.config.ts --coverage",
-		"dev": "pnpm test:watch",
-		"dev:install-hooks": "if [ -z \"$CI\" ]; then lefthook install; fi"
-	},
-	"keywords": [],
-	"author": "js2me",
-	"license": "MIT",
-	"description": "",
-	"type": "module",
-	"bugs": {
-		"url": "https://github.com/js2me/yummies/issues"
-	},
-	"homepage": "https://github.com/js2me/yummies",
-	"repository": {
-		"type": "git",
-		"url": "git://github.com/js2me/yummies"
-	},
-	"peerDependencies": {
-		"mobx": "^6.12.4",
-		"react": "^18 || ^19"
-	},
-	"peerDependenciesMeta": {
-		"mobx": {
-			"optional": true
-		},
-		"react": {
-			"optional": true
-		}
-	},
-	"dependencies": {
-		"class-variance-authority": "^0.7.1",
-		"clsx": "^2.1.1",
-		"dayjs": "^1.11.13",
-		"dompurify": "^3.2.6",
-		"nanoid": "^5.1.5",
-		"tailwind-merge": "^3.3.1"
-	},
-	"devDependencies": {
-		"@biomejs/biome": "2.2.2",
-		"@changesets/changelog-github": "^0.5.1",
-		"@changesets/cli": "^2.29.5",
-		"@types/node": "^20.17.30",
-		"@types/react": "^18",
-		"@vitejs/plugin-react-swc": "^3.9.0",
-		"@vitest/coverage-istanbul": "^3.1.2",
-		"commitfmt": "^1.0.4",
-		"js2me-biome-config": "^1.0.3",
-		"js2me-exports-post-build-script": "^5.0.1",
-		"jsdom": "^26.1.0",
-		"lefthook": "^1.11.16",
-		"nodemon": "^3.1.9",
-		"rimraf": "^6.0.1",
-		"typescript": "^5.8.3",
-		"vitest": "^3.1.2"
-	},
-	"packageManager": "pnpm@9.5.0+sha512.140036830124618d624a2187b50d04289d5a087f326c9edfc0ccd733d76c4f52c3a313d4fc148794a2a9d81553016004e6742e8cf850670268a7387fc220c903"
+  "name": "yummies",
+  "version": "5.3.2",
+  "scripts": {
+    "prepare": "pnpm dev:install-hooks",
+    "clean": "rm -rf dist",
+    "lint:check": "pnpm exec biome check --write --no-errors-on-unmatched --files-ignore-unknown=true",
+    "ts:check": "tsc --noEmit",
+    "check": "npm run lint:check && npm run ts:check",
+    "prebuild": "npm run clean && npm run check",
+    "build:watch": "pnpm build && nodemon --watch src --ext ts --exec \"pnpm build\"",
+    "build": "zshy && tsx scripts/generate-utility-types-file",
+    "pub": "pnpm build && npx scripts/publish",
+    "pub:patch": "PUBLISH_VERSION=patch pnpm pub",
+    "pub:minor": "PUBLISH_VERSION=minor pnpm pub",
+    "pub:major": "PUBLISH_VERSION=major pnpm pub",
+    "test": "vitest run --config vitest.config.ts",
+    "test:watch": "vitest watch --config vitest.config.ts",
+    "test:coverage": "vitest run --config vitest.config.ts --coverage",
+    "dev": "pnpm test:watch",
+    "dev:install-hooks": "if [ -z \"$CI\" ]; then lefthook install; fi"
+  },
+  "keywords": [],
+  "author": "js2me",
+  "license": "MIT",
+  "description": "",
+  "type": "module",
+  "bugs": {
+    "url": "https://github.com/js2me/yummies/issues"
+  },
+  "homepage": "https://github.com/js2me/yummies",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/js2me/yummies"
+  },
+  "peerDependencies": {
+    "mobx": "^6.12.4",
+    "react": "^18 || ^19"
+  },
+  "zshy": {
+    "exports": {
+      "./package.json": "./package.json",
+      "./complex": "./src/complex/index.ts",
+      "./format": "./src/format/index.ts",
+      "./mobx": "./src/mobx/index.ts",
+      "./parser": "./src/parser/index.ts",
+      "./react": "./src/react/index.ts",
+      "./type-guard": "./src/type-guard/index.ts",
+      "./utils/types": "./src/utils/types.ts",
+      "./async": "./src/async.ts",
+      "./common": "./src/common.ts",
+      "./cookie": "./src/cookie.ts",
+      "./data": "./src/data.ts",
+      "./date-time": "./src/date-time.ts",
+      "./device": "./src/device.ts",
+      "./encodings": "./src/encodings.ts",
+      "./errors": "./src/errors.ts",
+      "./file": "./src/file.ts",
+      "./html": "./src/html.ts",
+      "./id": "./src/id.ts",
+      "./imports": "./src/imports.ts",
+      "./math": "./src/math.ts",
+      "./media": "./src/media.ts",
+      "./ms": "./src/ms.ts",
+      "./number": "./src/number.ts",
+      "./price": "./src/price.ts",
+      "./random": "./src/random.ts",
+      "./sound": "./src/sound.ts",
+      "./storage": "./src/storage.ts",
+      "./text": "./src/text.ts",
+      "./vibrate": "./src/vibrate.ts"
+    }
+  },
+  "peerDependenciesMeta": {
+    "mobx": {
+      "optional": true
+    },
+    "react": {
+      "optional": true
+    }
+  },
+  "dependencies": {
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "dayjs": "^1.11.13",
+    "dompurify": "^3.2.6",
+    "nanoid": "^5.1.5",
+    "tailwind-merge": "^3.3.1"
+  },
+  "devDependencies": {
+    "@biomejs/biome": "2.2.2",
+    "@changesets/changelog-github": "^0.5.1",
+    "@changesets/cli": "^2.29.5",
+    "@types/node": "^20.17.30",
+    "@types/react": "^18",
+    "@vitejs/plugin-react-swc": "^3.9.0",
+    "@vitest/coverage-istanbul": "^3.1.2",
+    "commitfmt": "^1.0.4",
+    "js2me-biome-config": "^1.0.3",
+    "js2me-exports-post-build-script": "^5.5.0",
+    "jsdom": "^26.1.0",
+    "lefthook": "^1.11.16",
+    "nodemon": "^3.1.9",
+    "rimraf": "^6.0.1",
+    "tsx": "^4.20.5",
+    "typescript": "^5.8.3",
+    "vitest": "^3.1.2",
+    "zshy": "^0.4.2"
+  },
+  "packageManager": "pnpm@9.5.0+sha512.140036830124618d624a2187b50d04289d5a087f326c9edfc0ccd733d76c4f52c3a313d4fc148794a2a9d81553016004e6742e8cf850670268a7387fc220c903",
+  "files": [
+    "dist"
+  ],
+  "exports": {
+    "./package.json": "./package.json",
+    "./complex": {
+      "types": "./dist/complex/index.d.cts",
+      "import": "./dist/complex/index.js",
+      "require": "./dist/complex/index.cjs"
+    },
+    "./format": {
+      "types": "./dist/format/index.d.cts",
+      "import": "./dist/format/index.js",
+      "require": "./dist/format/index.cjs"
+    },
+    "./mobx": {
+      "types": "./dist/mobx/index.d.cts",
+      "import": "./dist/mobx/index.js",
+      "require": "./dist/mobx/index.cjs"
+    },
+    "./parser": {
+      "types": "./dist/parser/index.d.cts",
+      "import": "./dist/parser/index.js",
+      "require": "./dist/parser/index.cjs"
+    },
+    "./react": {
+      "types": "./dist/react/index.d.cts",
+      "import": "./dist/react/index.js",
+      "require": "./dist/react/index.cjs"
+    },
+    "./type-guard": {
+      "types": "./dist/type-guard/index.d.cts",
+      "import": "./dist/type-guard/index.js",
+      "require": "./dist/type-guard/index.cjs"
+    },
+    "./utils/types": {
+      "types": "./dist/utils/types.d.cts",
+      "import": "./dist/utils/types.js",
+      "require": "./dist/utils/types.cjs"
+    },
+    "./async": {
+      "types": "./dist/async.d.cts",
+      "import": "./dist/async.js",
+      "require": "./dist/async.cjs"
+    },
+    "./common": {
+      "types": "./dist/common.d.cts",
+      "import": "./dist/common.js",
+      "require": "./dist/common.cjs"
+    },
+    "./cookie": {
+      "types": "./dist/cookie.d.cts",
+      "import": "./dist/cookie.js",
+      "require": "./dist/cookie.cjs"
+    },
+    "./data": {
+      "types": "./dist/data.d.cts",
+      "import": "./dist/data.js",
+      "require": "./dist/data.cjs"
+    },
+    "./date-time": {
+      "types": "./dist/date-time.d.cts",
+      "import": "./dist/date-time.js",
+      "require": "./dist/date-time.cjs"
+    },
+    "./device": {
+      "types": "./dist/device.d.cts",
+      "import": "./dist/device.js",
+      "require": "./dist/device.cjs"
+    },
+    "./encodings": {
+      "types": "./dist/encodings.d.cts",
+      "import": "./dist/encodings.js",
+      "require": "./dist/encodings.cjs"
+    },
+    "./errors": {
+      "types": "./dist/errors.d.cts",
+      "import": "./dist/errors.js",
+      "require": "./dist/errors.cjs"
+    },
+    "./file": {
+      "types": "./dist/file.d.cts",
+      "import": "./dist/file.js",
+      "require": "./dist/file.cjs"
+    },
+    "./html": {
+      "types": "./dist/html.d.cts",
+      "import": "./dist/html.js",
+      "require": "./dist/html.cjs"
+    },
+    "./id": {
+      "types": "./dist/id.d.cts",
+      "import": "./dist/id.js",
+      "require": "./dist/id.cjs"
+    },
+    "./imports": {
+      "types": "./dist/imports.d.cts",
+      "import": "./dist/imports.js",
+      "require": "./dist/imports.cjs"
+    },
+    "./math": {
+      "types": "./dist/math.d.cts",
+      "import": "./dist/math.js",
+      "require": "./dist/math.cjs"
+    },
+    "./media": {
+      "types": "./dist/media.d.cts",
+      "import": "./dist/media.js",
+      "require": "./dist/media.cjs"
+    },
+    "./ms": {
+      "types": "./dist/ms.d.cts",
+      "import": "./dist/ms.js",
+      "require": "./dist/ms.cjs"
+    },
+    "./number": {
+      "types": "./dist/number.d.cts",
+      "import": "./dist/number.js",
+      "require": "./dist/number.cjs"
+    },
+    "./price": {
+      "types": "./dist/price.d.cts",
+      "import": "./dist/price.js",
+      "require": "./dist/price.cjs"
+    },
+    "./random": {
+      "types": "./dist/random.d.cts",
+      "import": "./dist/random.js",
+      "require": "./dist/random.cjs"
+    },
+    "./sound": {
+      "types": "./dist/sound.d.cts",
+      "import": "./dist/sound.js",
+      "require": "./dist/sound.cjs"
+    },
+    "./storage": {
+      "types": "./dist/storage.d.cts",
+      "import": "./dist/storage.js",
+      "require": "./dist/storage.cjs"
+    },
+    "./text": {
+      "types": "./dist/text.d.cts",
+      "import": "./dist/text.js",
+      "require": "./dist/text.cjs"
+    },
+    "./vibrate": {
+      "types": "./dist/vibrate.d.cts",
+      "import": "./dist/vibrate.js",
+      "require": "./dist/vibrate.cjs"
+    },
+    "./utility-types": {
+      "types": "./dist/utility-types.d.ts"
+    }
+  }
 }
