refactor: publish script

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "prebuild": "npm run clean && npm run check",
     "build:watch": "pnpm build && nodemon --watch src --ext ts --exec \"pnpm build\"",
     "build": "zshy && tsx scripts/generate-utility-types-file",
-    "pub": "pnpm build && npx scripts/publish",
+    "pub": "pnpm build && node js2me-exports-post-build-script/scripts/publish",
     "pub:patch": "PUBLISH_VERSION=patch pnpm pub",
     "pub:minor": "PUBLISH_VERSION=minor pnpm pub",
     "pub:major": "PUBLISH_VERSION=major pnpm pub",
@@ -97,7 +97,7 @@
     "@vitest/coverage-istanbul": "^3.1.2",
     "commitfmt": "^1.0.4",
     "js2me-biome-config": "^1.0.3",
-    "js2me-exports-post-build-script": "^5.5.0",
+    "js2me-exports-post-build-script": "^5.7.0",
     "jsdom": "^26.1.0",
     "lefthook": "^1.11.16",
     "nodemon": "^3.1.9",
