--- a/.github/workflows/version-or-publish.yml
+++ b/.github/workflows/version-or-publish.yml
@@ -37,8 +37,9 @@ jobs:
         id: pub-or-release-pr
         with:
           version: pnpm changeset version
-          publish: pnpm pub-ci
+          publish: pnpm pub
         env:
+          
           GITHUB_TOKEN: ${{ github.token }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
           NPM_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
