--- a/package.json
+++ b/package.json
@@ -113,7 +113,7 @@
   "files": [
     "dist",
     "utility-types.d.ts",
-    "utility-types.d.ts"
+    "utils"
   ],
   "exports": {
     "./package.json": "./package.json",
