fix: refert back zshy usage

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "check": "npm run lint:check && npm run ts:check",
     "prebuild": "npm run clean && npm run check",
     "build:watch": "pnpm build && nodemon --watch src --ext ts --exec \"pnpm build\"",
-    "build": "zshy && tsx scripts/process-exports-field && tsx scripts/generate-utility-types-file",
+    "build": "tsc && tsx scripts/post-build",
     "pub": "pnpm build && node node_modules/js2me-exports-post-build-script/scripts/publish",
     "pub:patch": "PUBLISH_VERSION=patch pnpm pub",
     "pub:minor": "PUBLISH_VERSION=minor pnpm pub",
@@ -35,42 +35,6 @@
   "peerDependencies": {
     "mobx": "^6.12.4",
     "react": "^18 || ^19"
-  },
-  "zshy": {
-    "exports": {
-      "./package.json": "./package.json",
-      "./complex": "./src/complex/index.ts",
-      "./format": "./src/format/index.ts",
-      "./mobx": "./src/mobx/index.ts",
-      "./parser": "./src/parser/index.ts",
-      "./react": "./src/react/index.ts",
-      "./type-guard": "./src/type-guard/index.ts",
-      "./utils/types": "./src/utils/types.ts",
-      "./async": "./src/async.ts",
-      "./common": "./src/common.ts",
-      "./cookie": "./src/cookie.ts",
-      "./css": "./src/css.ts",
-      "./data": "./src/data.ts",
-      "./date-time": "./src/date-time.ts",
-      "./device": "./src/device.ts",
-      "./encodings": "./src/encodings.ts",
-      "./errors": "./src/errors.ts",
-      "./file": "./src/file.ts",
-      "./html": "./src/html.ts",
-      "./id": "./src/id.ts",
-      "./imports": "./src/imports.ts",
-      "./math": "./src/math.ts",
-      "./media": "./src/media.ts",
-      "./ms": "./src/ms.ts",
-      "./number": "./src/number.ts",
-      "./price": "./src/price.ts",
-      "./random": "./src/random.ts",
-      "./sound": "./src/sound.ts",
-      "./storage": "./src/storage.ts",
-      "./text": "./src/text.ts",
-      "./vibrate": "./src/vibrate.ts",
-      "./utility-types": "./src/utils/types.ts"
-    }
   },
   "peerDependenciesMeta": {
     "mobx": {
@@ -105,358 +69,8 @@
     "rimraf": "^6.0.1",
     "tsx": "^4.20.5",
     "typescript": "^5.8.3",
-    "vitest": "^3.1.2",
-    "zshy": "^0.4.2"
+    "vitest": "^3.1.2"
   },
   "packageManager": "pnpm@9.5.0+sha512.140036830124618d624a2187b50d04289d5a087f326c9edfc0ccd733d76c4f52c3a313d4fc148794a2a9d81553016004e6742e8cf850670268a7387fc220c903",
-  "type": "module",
-  "files": [
-    "dist",
-    "utility-types.d.ts",
-    "utils"
-  ],
-  "exports": {
-    "./package.json": "./package.json",
-    "./complex": {
-      "types": "./dist/complex/index.d.ts",
-      "import": {
-        "types": "./dist/complex/index.d.ts",
-        "default": "./dist/complex/index.js"
-      },
-      "require": {
-        "types": "./dist/complex/index.d.cts",
-        "default": "./dist/complex/index.cjs"
-      }
-    },
-    "./format": {
-      "types": "./dist/format/index.d.ts",
-      "import": {
-        "types": "./dist/format/index.d.ts",
-        "default": "./dist/format/index.js"
-      },
-      "require": {
-        "types": "./dist/format/index.d.cts",
-        "default": "./dist/format/index.cjs"
-      }
-    },
-    "./mobx": {
-      "types": "./dist/mobx/index.d.ts",
-      "import": {
-        "types": "./dist/mobx/index.d.ts",
-        "default": "./dist/mobx/index.js"
-      },
-      "require": {
-        "types": "./dist/mobx/index.d.cts",
-        "default": "./dist/mobx/index.cjs"
-      }
-    },
-    "./parser": {
-      "types": "./dist/parser/index.d.ts",
-      "import": {
-        "types": "./dist/parser/index.d.ts",
-        "default": "./dist/parser/index.js"
-      },
-      "require": {
-        "types": "./dist/parser/index.d.cts",
-        "default": "./dist/parser/index.cjs"
-      }
-    },
-    "./react": {
-      "types": "./dist/react/index.d.ts",
-      "import": {
-        "types": "./dist/react/index.d.ts",
-        "default": "./dist/react/index.js"
-      },
-      "require": {
-        "types": "./dist/react/index.d.cts",
-        "default": "./dist/react/index.cjs"
-      }
-    },
-    "./type-guard": {
-      "types": "./dist/type-guard/index.d.ts",
-      "import": {
-        "types": "./dist/type-guard/index.d.ts",
-        "default": "./dist/type-guard/index.js"
-      },
-      "require": {
-        "types": "./dist/type-guard/index.d.cts",
-        "default": "./dist/type-guard/index.cjs"
-      }
-    },
-    "./utils/types": {
-      "types": "./dist/utils/types.d.ts",
-      "import": {
-        "types": "./dist/utils/types.d.ts",
-        "default": "./dist/utils/types.js"
-      },
-      "require": {
-        "types": "./dist/utils/types.d.cts",
-        "default": "./dist/utils/types.cjs"
-      }
-    },
-    "./async": {
-      "types": "./dist/async.d.ts",
-      "import": {
-        "types": "./dist/async.d.ts",
-        "default": "./dist/async.js"
-      },
-      "require": {
-        "types": "./dist/async.d.cts",
-        "default": "./dist/async.cjs"
-      }
-    },
-    "./common": {
-      "types": "./dist/common.d.ts",
-      "import": {
-        "types": "./dist/common.d.ts",
-        "default": "./dist/common.js"
-      },
-      "require": {
-        "types": "./dist/common.d.cts",
-        "default": "./dist/common.cjs"
-      }
-    },
-    "./cookie": {
-      "types": "./dist/cookie.d.ts",
-      "import": {
-        "types": "./dist/cookie.d.ts",
-        "default": "./dist/cookie.js"
-      },
-      "require": {
-        "types": "./dist/cookie.d.cts",
-        "default": "./dist/cookie.cjs"
-      }
-    },
-    "./css": {
-      "types": "./dist/css.d.ts",
-      "import": {
-        "types": "./dist/css.d.ts",
-        "default": "./dist/css.js"
-      },
-      "require": {
-        "types": "./dist/css.d.cts",
-        "default": "./dist/css.cjs"
-      }
-    },
-    "./data": {
-      "types": "./dist/data.d.ts",
-      "import": {
-        "types": "./dist/data.d.ts",
-        "default": "./dist/data.js"
-      },
-      "require": {
-        "types": "./dist/data.d.cts",
-        "default": "./dist/data.cjs"
-      }
-    },
-    "./date-time": {
-      "types": "./dist/date-time.d.ts",
-      "import": {
-        "types": "./dist/date-time.d.ts",
-        "default": "./dist/date-time.js"
-      },
-      "require": {
-        "types": "./dist/date-time.d.cts",
-        "default": "./dist/date-time.cjs"
-      }
-    },
-    "./device": {
-      "types": "./dist/device.d.ts",
-      "import": {
-        "types": "./dist/device.d.ts",
-        "default": "./dist/device.js"
-      },
-      "require": {
-        "types": "./dist/device.d.cts",
-        "default": "./dist/device.cjs"
-      }
-    },
-    "./encodings": {
-      "types": "./dist/encodings.d.ts",
-      "import": {
-        "types": "./dist/encodings.d.ts",
-        "default": "./dist/encodings.js"
-      },
-      "require": {
-        "types": "./dist/encodings.d.cts",
-        "default": "./dist/encodings.cjs"
-      }
-    },
-    "./errors": {
-      "types": "./dist/errors.d.ts",
-      "import": {
-        "types": "./dist/errors.d.ts",
-        "default": "./dist/errors.js"
-      },
-      "require": {
-        "types": "./dist/errors.d.cts",
-        "default": "./dist/errors.cjs"
-      }
-    },
-    "./file": {
-      "types": "./dist/file.d.ts",
-      "import": {
-        "types": "./dist/file.d.ts",
-        "default": "./dist/file.js"
-      },
-      "require": {
-        "types": "./dist/file.d.cts",
-        "default": "./dist/file.cjs"
-      }
-    },
-    "./html": {
-      "types": "./dist/html.d.ts",
-      "import": {
-        "types": "./dist/html.d.ts",
-        "default": "./dist/html.js"
-      },
-      "require": {
-        "types": "./dist/html.d.cts",
-        "default": "./dist/html.cjs"
-      }
-    },
-    "./id": {
-      "types": "./dist/id.d.ts",
-      "import": {
-        "types": "./dist/id.d.ts",
-        "default": "./dist/id.js"
-      },
-      "require": {
-        "types": "./dist/id.d.cts",
-        "default": "./dist/id.cjs"
-      }
-    },
-    "./imports": {
-      "types": "./dist/imports.d.ts",
-      "import": {
-        "types": "./dist/imports.d.ts",
-        "default": "./dist/imports.js"
-      },
-      "require": {
-        "types": "./dist/imports.d.cts",
-        "default": "./dist/imports.cjs"
-      }
-    },
-    "./math": {
-      "types": "./dist/math.d.ts",
-      "import": {
-        "types": "./dist/math.d.ts",
-        "default": "./dist/math.js"
-      },
-      "require": {
-        "types": "./dist/math.d.cts",
-        "default": "./dist/math.cjs"
-      }
-    },
-    "./media": {
-      "types": "./dist/media.d.ts",
-      "import": {
-        "types": "./dist/media.d.ts",
-        "default": "./dist/media.js"
-      },
-      "require": {
-        "types": "./dist/media.d.cts",
-        "default": "./dist/media.cjs"
-      }
-    },
-    "./ms": {
-      "types": "./dist/ms.d.ts",
-      "import": {
-        "types": "./dist/ms.d.ts",
-        "default": "./dist/ms.js"
-      },
-      "require": {
-        "types": "./dist/ms.d.cts",
-        "default": "./dist/ms.cjs"
-      }
-    },
-    "./number": {
-      "types": "./dist/number.d.ts",
-      "import": {
-        "types": "./dist/number.d.ts",
-        "default": "./dist/number.js"
-      },
-      "require": {
-        "types": "./dist/number.d.cts",
-        "default": "./dist/number.cjs"
-      }
-    },
-    "./price": {
-      "types": "./dist/price.d.ts",
-      "import": {
-        "types": "./dist/price.d.ts",
-        "default": "./dist/price.js"
-      },
-      "require": {
-        "types": "./dist/price.d.cts",
-        "default": "./dist/price.cjs"
-      }
-    },
-    "./random": {
-      "types": "./dist/random.d.ts",
-      "import": {
-        "types": "./dist/random.d.ts",
-        "default": "./dist/random.js"
-      },
-      "require": {
-        "types": "./dist/random.d.cts",
-        "default": "./dist/random.cjs"
-      }
-    },
-    "./sound": {
-      "types": "./dist/sound.d.ts",
-      "import": {
-        "types": "./dist/sound.d.ts",
-        "default": "./dist/sound.js"
-      },
-      "require": {
-        "types": "./dist/sound.d.cts",
-        "default": "./dist/sound.cjs"
-      }
-    },
-    "./storage": {
-      "types": "./dist/storage.d.ts",
-      "import": {
-        "types": "./dist/storage.d.ts",
-        "default": "./dist/storage.js"
-      },
-      "require": {
-        "types": "./dist/storage.d.cts",
-        "default": "./dist/storage.cjs"
-      }
-    },
-    "./text": {
-      "types": "./dist/text.d.ts",
-      "import": {
-        "types": "./dist/text.d.ts",
-        "default": "./dist/text.js"
-      },
-      "require": {
-        "types": "./dist/text.d.cts",
-        "default": "./dist/text.cjs"
-      }
-    },
-    "./vibrate": {
-      "types": "./dist/vibrate.d.ts",
-      "import": {
-        "types": "./dist/vibrate.d.ts",
-        "default": "./dist/vibrate.js"
-      },
-      "require": {
-        "types": "./dist/vibrate.d.cts",
-        "default": "./dist/vibrate.cjs"
-      }
-    },
-    "./utility-types": {
-      "types": "./utility-types.d.ts",
-      "import": {
-        "types": "./dist/utils/types.d.ts",
-        "default": "./dist/utils/types.js"
-      },
-      "require": {
-        "types": "./dist/utils/types.d.cts",
-        "default": "./dist/utils/types.cjs"
-      }
-    }
-  }
+  "type": "module"
 }
