refactor: build (use zshy + internal bandler)

--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "check": "npm run lint:check && npm run ts:check",
     "prebuild": "npm run clean && npm run check",
     "build:watch": "pnpm build && nodemon --watch src --ext ts --exec \"pnpm build\"",
-    "build": "tsc && tsx post-build",
-    "pub": "PUBLISH=true pnpm build",
+    "build": "zshy && sborshik fill-dist && tsx scripts/generate-utility-types-file",
+    "pub": "pnpm build && sborshik publish --openDistDir",
     "pub:patch": "PUBLISH_VERSION=patch pnpm pub",
     "pub:minor": "PUBLISH_VERSION=minor pnpm pub",
     "pub:major": "PUBLISH_VERSION=major pnpm pub",
@@ -44,6 +44,42 @@
       "optional": true
     }
   },
+  "zshy": {
+    "exports": {
+      "./package.json": "./package.json",
+      "./complex": "./src/complex/index.ts",
+      "./format": "./src/format/index.ts",
+      "./mobx": "./src/mobx/index.ts",
+      "./parser": "./src/parser/index.ts",
+      "./react": "./src/react/index.ts",
+      "./type-guard": "./src/type-guard/index.ts",
+      "./utils/types": "./src/utils/types.ts",
+      "./async": "./src/async.ts",
+      "./common": "./src/common.ts",
+      "./cookie": "./src/cookie.ts",
+      "./css": "./src/css.ts",
+      "./data": "./src/data.ts",
+      "./date-time": "./src/date-time.ts",
+      "./device": "./src/device.ts",
+      "./encodings": "./src/encodings.ts",
+      "./errors": "./src/errors.ts",
+      "./file": "./src/file.ts",
+      "./html": "./src/html.ts",
+      "./id": "./src/id.ts",
+      "./imports": "./src/imports.ts",
+      "./math": "./src/math.ts",
+      "./media": "./src/media.ts",
+      "./ms": "./src/ms.ts",
+      "./number": "./src/number.ts",
+      "./price": "./src/price.ts",
+      "./random": "./src/random.ts",
+      "./sound": "./src/sound.ts",
+      "./storage": "./src/storage.ts",
+      "./text": "./src/text.ts",
+      "./vibrate": "./src/vibrate.ts",
+      "./utility-types": "./src/utility-types.d.ts"
+    }
+  },
   "dependencies": {
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -62,14 +98,15 @@
     "@vitest/coverage-istanbul": "^3.1.2",
     "commitfmt": "^1.0.4",
     "js2me-biome-config": "^1.0.3",
-    "js2me-exports-post-build-script": "^5.7.0",
+    "sborshik": "^1.0.5",
     "jsdom": "^26.1.0",
     "lefthook": "^1.11.16",
     "nodemon": "^3.1.9",
     "rimraf": "^6.0.1",
     "tsx": "^4.20.5",
     "typescript": "^5.8.3",
-    "vitest": "^3.1.2"
+    "vitest": "^3.1.2",
+    "zshy": "^0.4.2"
   },
   "packageManager": "pnpm@9.5.0+sha512.140036830124618d624a2187b50d04289d5a087f326c9edfc0ccd733d76c4f52c3a313d4fc148794a2a9d81553016004e6742e8cf850670268a7387fc220c903",
   "type": "module"
