--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "prebuild": "npm run clean && npm run check",
     "build:watch": "pnpm build && nodemon --watch src --ext ts --exec \"pnpm build\"",
     "build": "sborshik build --fillDist && tsx scripts/generate-utility-types-file",
-    "pub": "pnpm build && sborshik publish --openDistDir",
+    "pub": "pnpm build && sborshik publish --useDistDir",
     "pub:patch": "PUBLISH_VERSION=patch pnpm pub",
     "pub:minor": "PUBLISH_VERSION=minor pnpm pub",
     "pub:major": "PUBLISH_VERSION=major pnpm pub",
