refactor: improved treeshaking by changing bundler lib

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,39 @@
 		"isolatedModules": true,
 		"typeRoots": ["./node_modules/@types/", "./types", "./node_modules"],
 		"noEmit": false,
-		"jsx": "react-jsx"
+		"jsx": "react-jsx",
+		"paths": {
+			"yummies/complex": ["./src/complex/index.ts"],
+			"yummies/format": ["./src/format/index.ts"],
+			"yummies/mobx": ["./src/mobx/index.ts"],
+			"yummies/parser": ["./src/parser/index.ts"],
+			"yummies/react": ["./src/react/index.ts"],
+			"yummies/type-guard": ["./src/type-guard/index.ts"],
+			"yummies/utils/types": ["./src/utils/types.ts"],
+			"yummies/async": ["./src/async.ts"],
+			"yummies/common": ["./src/common.ts"],
+			"yummies/cookie": ["./src/cookie.ts"],
+			"yummies/css": ["./src/css.ts"],
+			"yummies/data": ["./src/data.ts"],
+			"yummies/date-time": ["./src/date-time.ts"],
+			"yummies/device": ["./src/device.ts"],
+			"yummies/encodings": ["./src/encodings.ts"],
+			"yummies/errors": ["./src/errors.ts"],
+			"yummies/file": ["./src/file.ts"],
+			"yummies/html": ["./src/html.ts"],
+			"yummies/id": ["./src/id.ts"],
+			"yummies/imports": ["./src/imports.ts"],
+			"yummies/math": ["./src/math.ts"],
+			"yummies/media": ["./src/media.ts"],
+			"yummies/ms": ["./src/ms.ts"],
+			"yummies/number": ["./src/number.ts"],
+			"yummies/price": ["./src/price.ts"],
+			"yummies/random": ["./src/random.ts"],
+			"yummies/sound": ["./src/sound.ts"],
+			"yummies/text": ["./src/text.ts"],
+			"yummies/utility-types": ["./src/utility-types.ts"],
+			"yummies/vibrate": ["./src/vibrate.ts"]
+		}
 	},
 	"include": ["src"],
 	"exclude": ["src/**/*.test.ts"]
