--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "check": "npm run lint:check && npm run ts:check",
     "prebuild": "npm run clean && npm run check",
     "build:watch": "pnpm build && nodemon --watch src --ext ts --exec \"pnpm build\"",
-    "build": "sborshik build --fillDist && tsx scripts/generate-utility-types-file",
+    "build": "vite build && tsx scripts/prepare-dist && tsx scripts/generate-utility-types-file",
     "pub": "pnpm build && sborshik publish --useDistDir",
     "pub:patch": "PUBLISH_VERSION=patch pnpm pub",
     "pub:minor": "PUBLISH_VERSION=minor pnpm pub",
@@ -48,42 +48,6 @@
       "optional": true
     }
   },
-  "zshy": {
-    "exports": {
-      "./package.json": "./package.json",
-      "./complex": "./src/complex/index.ts",
-      "./format": "./src/format/index.ts",
-      "./mobx": "./src/mobx/index.ts",
-      "./parser": "./src/parser/index.ts",
-      "./react": "./src/react/index.ts",
-      "./type-guard": "./src/type-guard/index.ts",
-      "./utils/types": "./src/utils/types.ts",
-      "./async": "./src/async.ts",
-      "./common": "./src/common.ts",
-      "./cookie": "./src/cookie.ts",
-      "./css": "./src/css.ts",
-      "./data": "./src/data.ts",
-      "./date-time": "./src/date-time.ts",
-      "./device": "./src/device.ts",
-      "./encodings": "./src/encodings.ts",
-      "./errors": "./src/errors.ts",
-      "./file": "./src/file.ts",
-      "./html": "./src/html.ts",
-      "./id": "./src/id.ts",
-      "./imports": "./src/imports.ts",
-      "./math": "./src/math.ts",
-      "./media": "./src/media.ts",
-      "./ms": "./src/ms.ts",
-      "./number": "./src/number.ts",
-      "./price": "./src/price.ts",
-      "./random": "./src/random.ts",
-      "./sound": "./src/sound.ts",
-      "./storage": "./src/storage.ts",
-      "./text": "./src/text.ts",
-      "./vibrate": "./src/vibrate.ts",
-      "./utility-types": "./src/utility-types.d.ts"
-    }
-  },
   "dependencies": {
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -102,13 +66,15 @@
     "@vitest/coverage-istanbul": "^3.1.2",
     "commitfmt": "^1.0.4",
     "js2me-biome-config": "^1.0.3",
-    "sborshik": "^1.0.10",
     "jsdom": "^26.1.0",
     "lefthook": "^1.11.16",
     "nodemon": "^3.1.9",
     "rimraf": "^6.0.1",
+    "sborshik": "^1.0.22",
     "tsx": "^4.20.5",
     "typescript": "^5.8.3",
+    "vite": "^7.1.9",
+    "vite-plugin-dts": "^4.5.4",
     "vitest": "^3.1.2",
     "zshy": "^0.4.2"
   },
