--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
       "optional": true
     }
   },
+  "sideEffects": false,
   "dependencies": {
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
