--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "check": "npm run lint:check && npm run ts:check",
     "prebuild": "npm run clean && npm run check",
     "build:watch": "pnpm build && nodemon --watch src --ext ts --exec \"pnpm build\"",
-    "build": "vite build && tsx scripts/prepare-dist && tsx scripts/generate-utility-types-file",
+    "build": "vite build && tsx scripts/generate-utility-types-file",
     "pub": "pnpm build && sborshik publish --useDistDir",
     "pub:patch": "PUBLISH_VERSION=patch pnpm pub",
     "pub:minor": "PUBLISH_VERSION=minor pnpm pub",
@@ -71,7 +71,7 @@
     "lefthook": "^1.11.16",
     "nodemon": "^3.1.9",
     "rimraf": "^6.0.1",
-    "sborshik": "^1.0.25",
+    "sborshik": "^1.0.33",
     "tsx": "^4.20.5",
     "typescript": "^5.8.3",
     "vite": "^7.1.9",
